Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(boolean var)
    end
end
